@@ -11,7 +11,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -20,7 +20,6 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
-
 import uk.gov.companieshouse.filing.received.FilingReceived;
 import uk.gov.companieshouse.filing.received.SubmissionRecord;
 import uk.gov.companieshouse.kafka.consumer.CHConsumer;
@@ -33,8 +32,8 @@ import uk.gov.companieshouse.kafka.message.Message;
 @ExtendWith(MockitoExtension.class)
 class FilingReaderImplTest {
 
-    @InjectMocks
     @Spy
+    @InjectMocks
     private FilingReaderImpl reader;
 
     @Mock
@@ -45,20 +44,21 @@ class FilingReaderImplTest {
 
     @Mock
     private AvroDeserializer<FilingReceived> deserializer;
-    
-    @Test
+
+    @BeforeEach
     void init() {
         doReturn(consumer).when(reader).createConsumer(Mockito.any());
         reader.brokerAddress = "kafka address";
         reader.topicName = "filing-received";
         reader.applicationName = "chips filing mock";
-        
+
         reader.init();
 
         assertEquals(consumer, reader.consumer);
         verify(consumer).connect();
-        
-        ArgumentCaptor<ConsumerConfig> consumerConfigCaptor = ArgumentCaptor.forClass(ConsumerConfig.class);
+
+        ArgumentCaptor<ConsumerConfig> consumerConfigCaptor = ArgumentCaptor.forClass(
+                ConsumerConfig.class);
         verify(reader).createConsumer(consumerConfigCaptor.capture());
         ConsumerConfig config = consumerConfigCaptor.getValue();
         assertNotNull(config.getBrokerAddresses());
@@ -66,7 +66,7 @@ class FilingReaderImplTest {
         assertEquals(reader.brokerAddress, config.getBrokerAddresses()[0]);
         assertNotNull(config.getTopics());
         assertEquals(1, config.getTopics().size());
-        assertEquals(reader.topicName, config.getTopics().get(0));
+        assertEquals(reader.topicName, config.getTopics().getFirst());
         assertEquals(reader.applicationName, config.getGroupName());
         assertEquals(reader.pollTimeout, config.getPollTimeout());
     }
@@ -83,7 +83,8 @@ class FilingReaderImplTest {
 
     @Test
     void readValidMessages() throws Exception {
-        when(deserializerFactory.getSpecificRecordDeserializer(FilingReceived.class)).thenReturn(deserializer);
+        when(deserializerFactory.getSpecificRecordDeserializer(FilingReceived.class)).thenReturn(
+                deserializer);
 
         List<Message> messages = new ArrayList<>();
         Message message1 = new Message();
@@ -106,7 +107,8 @@ class FilingReaderImplTest {
 
     @Test
     void readInvalidMessage() throws Exception {
-        when(deserializerFactory.getSpecificRecordDeserializer(FilingReceived.class)).thenReturn(deserializer);
+        when(deserializerFactory.getSpecificRecordDeserializer(FilingReceived.class)).thenReturn(
+                deserializer);
 
         List<Message> messages = new ArrayList<>();
         Message message1 = new Message();
@@ -116,7 +118,8 @@ class FilingReaderImplTest {
         when(consumer.consume()).thenReturn(messages);
 
         FilingReceived filing2 = createFilingReceived("1");
-        when(deserializer.fromBinary(message1, FilingReceived.SCHEMA$)).thenThrow(DeserializationException.class);
+        when(deserializer.fromBinary(message1, FilingReceived.SCHEMA$)).thenThrow(
+                DeserializationException.class);
         when(deserializer.fromBinary(message2, FilingReceived.SCHEMA$)).thenReturn(filing2);
 
         Collection<FilingReceived> result = reader.read();
